<resources>
    <string name="app_name">LoginApp</string>
    <string name="nombre">Nombre:</string>
    <string name="clave">Clave:</string>
    <string name="guardar_credenciales">Guardar credenciales</string>
    <string name="acceder">Acceder</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="borrar_credenciales">Borrar</string>
    <string name="hint_nombre">Introducir nombre</string>
    <string name="hint_clave">Introducir clave</string>
</resources>